# rusty-bird

./: Cargo.toml  README.md
src/: game.rs  main.rs
src/game/: faby.rs  ground.rs  pipes.rs
