[package]
name = "rusty-bird"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.22"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package."bevy-inspector-egui"]
opt-level = 1
